# azure-ai-continuous-assurance

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_USAGE.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
.github/: README.md  dependabot.yml
.impeccable/: config.json
assurance/: ARTIFACT_INDEX.md
config/: system-record.json
deploy/: api.Dockerfile  job.Dockerfile
docs/: architecture.md  cost-model.md  data-flow.md  framework-crosswalk.md  limitations.md  release-readiness.md  shared-responsibility.md  threat-model.md
infra/: README.md  main.bicep
policy/: README.md  azure_iac.rego
schemas/: assessment-diff.schema.json  assessment-package.schema.json  assessment-run.schema.json  assurance-lifecycle.schema.json  behavioral-cases.schema.json  control-profile.schema.json  core-contracts.schema.json  corpus-handoff.schema.json  corpus-materialization-receipt.schema.json  deployment-image-readback-receipt.schema.json  entra-app-registration-handoff.schema.json  entra-materialization-receipt.schema.json  entra-mcp-handoff.schema.json  evidence-bundle.schema.json  mapping-benchmark.schema.json  operational-telemetry.schema.json  scenario.schema.json  supply-chain-image-set.schema.json  system-record.schema.json  test-results.schema.json
sentinel/: README.md  workbook.json
tests/: conftest.py  test_api.py  test_api_store.py  test_assistant.py  test_azure_fixture_campaign.py  test_behavioral_runtime.py  test_benchmarks.py  test_command_worker.py  test_corpus_integrity.py  test_deployment_handoffs.py  test_domain.py  test_evaluator.py  test_fixture_cleanup.py  test_github_collector.py  test_image_handoff.py  test_live_behavioral_collection.py  test_manifest.py  (+9 more)
(+302 files in other folders)
